--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 </head>
 <body>
 
-<!-- Background Video & Header -->
+
 
     <div class="banner">
         <video src="./files/bgvid.mp4" type="video/mp4" autoplay muted loop></video>
-    
-    <!-- Header -->
+
 
     <div class="content" id="home"> 
         <nav>
@@ -33,7 +32,7 @@
                     <a href="#locations">Locations</a>
                     <a href="#package">Packages</a>
                     <a href="./about.html">About Us</a>
-                    <a href="./about.html">Contact Us</a>
+                    <a href="./contact.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
