--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
             <input type="tel" name="myphone" placeholder="Phone No." id="phonenum" required>
             <input type="number" name="myage" placeholder="Age" id="myage" required>
             <h4>Gender</h4>
-            <input type="radio" name="mygender" value="male" required> Male &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+            <input type="radio" name="mygender" value="male" required> Male &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   
             <input type="radio" name="mygender" value="female"> Female
             <h4>Departure</h4>
             <input type="datetime-local" name="departuredate" id="departuredate" required>
@@ -89,13 +89,13 @@
                 <div class="footlinks">
                     <h4>Connect</h4>
                     <div class="social">
-                        <a href="https://www.facebook.com/mohd.rahil.blogger" target="_blank"><i class='bx bxl-facebook'></i></a>
-                        <a href="https://www.instagram.com/mohdrahil101" target="_blank"><i class='bx bxl-instagram' ></i></a>
-                        <a href="https://www.twitter.com/mohdrahil101" target="_blank"><i class='bx bxl-twitter' ></i></a>
-                        <a href="https://www.linkedin.com/in/mohdrahil101" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                        <a href="https://www.youtube.com/techdollarz" target="_blank"><i class='bx bxl-youtube' ></i></a>
-                        <a href="https://www.mohdrahil.wordpress.com" target="_blank"><i class='bx bxl-wordpress' ></i></a>
-                        <a href="https://www.github.com/mohdrahil101" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-facebook'></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-twitter' ></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-youtube' ></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-wordpress' ></i></a>
+                        <a href="" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                 </div>
                 
@@ -103,7 +103,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright © 2022 Firstflight Travels All Rights Reserved.<br>Website developed by: Mohd. Rahil</p>
+            <p>Copyright © 2022 Firstflight Travels All Rights Reserved.<br>Website developed by: Praveen kumar</p>
         </div>
     </section>
 
